--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-              </div><div class="row align-items-center">
+              <div class="row align-items-center">
                   <div class="col-md-7">
                     <h1>Y-box to wast time</h1>
                     <p>This is the best x-box in the world who wast his time</p>
@@ -86,6 +86,28 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
+    </div>
+    <div class="container categories">
+        <div class="row">
+            <div class="col-md-4">
+                <div class="cat1">
+                    <h1>Watch</h1>
+                    <img src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4">
+               <div class="cat2">
+                <h1>Bag</h1>
+                <img src="images/categories/bag.png" alt="">
+               </div> 
+            </div>
+            <div class="col-md-4">
+                <div class="cat3">
+                    <h1>Shoes</h1>
+                    <img src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
     </div>
  
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
